k8s/products/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: ms-service
spec:
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: sing3demons/go-service-products:1.0.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 4
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/live
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: "500m"
          ports:
            - containerPort: 8080
