k8s/products/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: ms-service
spec:
  selector:
    app.kubernetes.io/name: products
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
