k8s/products/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: ms-service
  labels:
    name: myingress
spec:
  rules:
  - host: kp.sing3demons
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: products-service
            port: 
              number: 8080
